fixed splash screen and white borders on mobile with 21:9 aspect ratio

--- a/src/Game.css
+++ b/src/Game.css
@@ -7,8 +7,9 @@
 
 
 .game {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  height: 100dvh;
   position: fixed;
   inset: 0;
   overflow: hidden;
