--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -13,6 +13,8 @@
     align-items: center;
     background-color: white;
     padding: 20px;
+
+   box-shadow: 5px 5px 0px 0px rgba(0,0,0,1);
   }
 
   button {
