--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
-html,
-body,
-#root {
+html, body, #root {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
-  margin: 0;
+  overflow: hidden;
+
+  background: rgb(108, 199, 232);
+  animation: bgSwap 0.5s ease forwards;
+  animation-delay: 0.5s;
+}
+
+@keyframes bgSwap {
+  from { background: rgb(108, 199, 232); }
+  to   { background: rgb(167, 190, 87) }
 }
